# alloy-rs-examples

examples/defi/: Cargo.toml  README.md
examples/defi/examples/: arbitrage.rs  swap.rs
examples/defi/examples/artifacts/: IERC20.json  IQuoter.json  ISwapRouter.json  IUniswapV3Factory.json
examples/transactions/examples/: permit2_adv.rs  permit2_allowance_transfer.rs  permit2_signature_transfer.rs  permit2_signature_transfer_batch.rs
examples/unifi/: Cargo.toml
examples/unifi/examples/: pay_1.rs
examples/unifi/src/: bundleup.rs  lib.rs  permit2.rs
examples/unifi/src/artifacts/: BundlePayV2.json
